<?xml version="1.0" encoding="UTF-8"?>
<!--
Licensed to the Apache Software Foundation (ASF) under one or more
contributor license agreements.  See the NOTICE file distributed with
this work for additional information regarding copyright ownership.
The ASF licenses this file to You under the Apache License, Version 2.0
(the "License"); you may not use this file except in compliance with
the License.  You may obtain a copy of the License at

    http://www.apache.org/licenses/LICENSE-2.0

Unless required by applicable law or agreed to in writing, software
distributed under the License is distributed on an "AS IS" BASIS,
WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
See the License for the specific language governing permissions and
limitations under the License.
-->
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">

    <modelVersion>4.0.0</modelVersion>
    <groupId>org.apache.roller</groupId>
    <artifactId>roller-project</artifactId>
    <version>6.1.0-SNAPSHOT</version>
    <packaging>pom</packaging>

    <name>Roller</name>
    <description>
        Roller is an open source blog server built with open source Java
        libraries including Struts2, Velocity, ROME and Guice.
    </description>
    <url>http://roller.apache.org</url>
    <inceptionYear>2002</inceptionYear>

    <scm>
        <url>https://github.com/apache/roller</url>
        <connection>scm:git:git://github.com/apache/roller.git</connection>
        <developerConnection>scm:git:git@github.com:apache/roller.git</developerConnection>
    </scm>

    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
        <derby.version>10.11.1.1</derby.version>
        <jaxb.version>2.3.1</jaxb.version>
        <jetty.version>10.0.3</jetty.version>
        <roller.version>6.1.0-SNAPSHOT</roller.version>
    </properties>

    <modules>
        <module>app</module>
        <!-- <module>it-selenium</module> -->
    </modules>

    <build>
        <pluginManagement>
            <plugins>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-compiler-plugin</artifactId>
                    <version>3.8.1</version>
                    <configuration>
                        <release>11</release>
                        <fork>true</fork>
                        <compilerArgument>-Xlint:deprecation</compilerArgument>
                        <encoding>${project.build.sourceEncoding}</encoding>
                    </configuration>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-idea-plugin</artifactId>
                    <version>2.2.1</version>
                    <configuration>
                        <downloadSources>true</downloadSources>
                    </configuration>
                </plugin>
                <plugin>
                    <groupId>org.eclipse.jetty</groupId>
                    <artifactId>jetty-maven-plugin</artifactId>
                    <version>${jetty.version}</version>
                </plugin>
                <plugin>
                    <groupId>com.btmatthews.maven.plugins.inmemdb</groupId>
                    <artifactId>inmemdb-maven-plugin</artifactId>
                    <version>1.4.3</version>
                    <configuration>
                        <monitorKey>inmemdb</monitorKey>
                        <monitorPort>11527</monitorPort>
                    </configuration>
                </plugin>
                <plugin>
                    <groupId>org.codehaus.mojo</groupId>
                    <artifactId>versions-maven-plugin</artifactId>
                    <version>2.8.1</version>
                    <configuration>
                        <rulesUri>file:version-rules.xml</rulesUri>
                    </configuration>
                </plugin>
            </plugins>
        </pluginManagement>
    </build>

    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>org.junit.jupiter</groupId>
                <artifactId>junit-jupiter-engine</artifactId>
                <version>5.7.2</version>
                <scope>test</scope>
            </dependency>
        </dependencies>
    </dependencyManagement>

</project>
